[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/themes/buttons-blue.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/Rubik-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://objects/Player/square.svg" type="Texture" id=3]
[ext_resource path="res://objects/SelectablePlayer/SelectablePlayer.gd" type="Script" id=4]
[ext_resource path="res://assets/images/icons/buttons/key.d.svg" type="Texture" id=5]
[ext_resource path="res://assets/images/icons/select-arrows/right.svg" type="Texture" id=6]
[ext_resource path="res://assets/images/icons/select-arrows/right.press.svg" type="Texture" id=7]
[ext_resource path="res://assets/images/icons/buttons/key.a.svg" type="Texture" id=8]
[ext_resource path="res://assets/sounds/sfx/page.wav" type="AudioStream" id=9]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.0862745 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="Theme" id=8]
Panel/styles/panel = SubResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[node name="SelectablePlayer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 1475.0
margin_bottom = 975.0
theme = SubResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
margin_left = 25.0
margin_top = 25.0
margin_right = 1475.0
margin_bottom = 975.0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_right = 642.0
margin_bottom = 950.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player-left" type="TextureButton" parent="HBoxContainer/CenterContainer"]
margin_left = 271.0
margin_top = 425.0
margin_right = 371.0
margin_bottom = 525.0
focus_mode = 0
theme = ExtResource( 1 )
toggle_mode = true
enabled_focus_mode = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
stretch_mode = 5
flip_h = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/CenterContainer/Player-left"]
anchor_left = 0.901
anchor_top = 0.451
anchor_right = 0.901
anchor_bottom = 0.451
margin_left = -50.0
margin_top = -25.0
margin_bottom = 25.0
size_flags_horizontal = 9
texture = ExtResource( 8 )

[node name="TimerLeft" type="Timer" parent="HBoxContainer/CenterContainer/Player-left"]
wait_time = 0.1
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 646.0
margin_right = 803.0
margin_bottom = 950.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 157.0
margin_bottom = 473.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 30
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Player-image" type="TextureButton" parent="HBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 30.0
margin_right = 137.0
margin_bottom = 453.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Player Num" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 477.0
margin_right = 157.0
margin_bottom = 950.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 2 )
text = "Player 1"
align = 1
valign = 1

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer"]
margin_left = 807.0
margin_right = 1450.0
margin_bottom = 950.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player-right" type="TextureButton" parent="HBoxContainer/CenterContainer2"]
margin_left = 271.0
margin_top = 425.0
margin_right = 371.0
margin_bottom = 525.0
focus_mode = 0
theme = ExtResource( 1 )
toggle_mode = true
enabled_focus_mode = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/CenterContainer2/Player-right"]
anchor_left = 0.086
anchor_top = 0.451
anchor_right = 0.086
anchor_bottom = 0.451
margin_top = -25.0
margin_right = 50.0
margin_bottom = 25.0
texture = ExtResource( 5 )

[node name="TimerRight" type="Timer" parent="HBoxContainer/CenterContainer2/Player-right"]
wait_time = 0.1
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 1475.0
margin_bottom = 975.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1430.0
margin_bottom = 930.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 4 )
text = "START_TO_JOIN"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="ReadyContainer" type="MarginContainer" parent="."]
visible = false
margin_left = 25.0
margin_top = 25.0
margin_right = 1475.0
margin_bottom = 975.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ColorRect2" type="ColorRect" parent="ReadyContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1430.0
margin_bottom = 930.0
color = Color( 0, 0.278431, 0, 0.509804 )

[node name="Label" type="Label" parent="ReadyContainer"]
modulate = Color( 0.968627, 0.952941, 0, 1 )
margin_left = 20.0
margin_top = 20.0
margin_right = 1430.0
margin_bottom = 930.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 6 )
text = "PLAYER_READY_LABEL"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="TextureButton" type="TextureButton" parent="ReadyContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1430.0
margin_bottom = 930.0

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 7.0
bus = "SFX"

[connection signal="pressed" from="HBoxContainer/CenterContainer/Player-left" to="." method="_on_Playerleft_pressed"]
[connection signal="timeout" from="HBoxContainer/CenterContainer/Player-left/TimerLeft" to="." method="_on_TimerLeft_timeout"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MarginContainer/Player-image" to="." method="_on_Playerimage_pressed"]
[connection signal="pressed" from="HBoxContainer/CenterContainer2/Player-right" to="." method="_on_Playerright_pressed"]
[connection signal="timeout" from="HBoxContainer/CenterContainer2/Player-right/TimerRight" to="." method="_on_TimerRight_timeout"]
[connection signal="pressed" from="ReadyContainer/TextureButton" to="." method="_on_Playerimage_pressed"]
